test/project/release_a/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      securityContext:
        fsGroup: 2000
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: logoutput
          image: vuolahti/logoutput:03
          volumeMounts:
          - name: shared-image
            mountPath: /tmp/kube
        - name: pingpong
          image: vuolahti/pingpong:03
          volumeMounts:
          - name: shared-image
            mountPath: /tmp/kube
