test/project/release_a/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              name: logoutput-port
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              name: pingpong-port
